--- a/Player/examples/shaka/index.html
+++ b/Player/examples/shaka/index.html
@@ -13,9 +13,9 @@
 </div>
 
 <p></p>
-<a href="https://stackblitz.com/fork/github/___YOUR_PATH___">
+<a href="https://stackblitz.com/edit/azure-samples-media-services-v3-node-tutorials-nk3aeu?file=index.html&title=AMS%20Shaka%20Player%20Timed%20Metadata%20Sample">
     <img
       alt="Open in StackBlitz"
-      src="https://developer.stackblitz.com/img/open_in_stackblitz.svg"
+      src="img/open_in_stackblitz.svg"
     />
   </a>
