--- a/Player/examples/shaka/index.html
+++ b/Player/examples/shaka/index.html
@@ -1,21 +1,19 @@
 <div>
-    <script type="module" src="./index.js"></script>
-    <link href="./style.css" type="text/css" rel="stylesheet"></link>
+  <script type="module" src="./index.js"></script>
+  <link href="./style.css" type="text/css" rel="stylesheet">
+  </link>
 
-    <div style=" max-width: 40em" id="video-container" data-shaka-player-cast-receiver-id="07AEE832">
+  <div style=" max-width: 40em" id="video-container" data-shaka-player-cast-receiver-id="07AEE832">
     <div id="metadata" class="metadata-hide"></div>
     <video autoplay muted playsinline id="video" style="width: 100%; height: 100%"></video>
-</div>
+  </div>
 
-<label>Your Manifest (paste and hit enter):</label>
-<input id="manifestUrl" type="url" placeholder="place manifest URL here" size="120"
+  <label>Your Manifest (paste and hit enter):</label>
+  <input id="manifestUrl" type="url" placeholder="place manifest URL here" size="80"
     value="//aka.ms/LowLatencyDemo.m3u8" />
 </div>
-
-<p></p>
-<a href="https://stackblitz.com/fork/github/Azure-Samples/media-services-v3-node-tutorials/tree/main/Player/examples/shaka?file=index.html&title=AMS%20Shaka%20Player%20Timed%20Metadata%20Sample">
-    <img
-      alt="Open in StackBlitz"
-      src="img/open_in_stackblitz.svg"
-    />
-  </a>
+<p>
+</p>
+<div id="eventLog" class="eventLog">
+  waiting for timed metadata events...
+</div>
