--- a/Player/examples/shaka/index.html
+++ b/Player/examples/shaka/index.html
@@ -1,19 +1,24 @@
-<div>
-  <script type="module" src="./index.js"></script>
-  <link href="./style.css" type="text/css" rel="stylesheet">
-  </link>
+<script type="module" src="./index.js"></script>
+<link href="./style.css" type="text/css" rel="stylesheet">
 
-  <div style=" max-width: 40em" id="video-container" data-shaka-player-cast-receiver-id="07AEE832">
-    <div id="metadata" class="metadata-hide"></div>
-    <video autoplay muted playsinline id="video" style="width: 100%; height: 100%"></video>
+<div class="grid-container">
+
+  <div id="header">Azure Media Services LL-HLS with Timed Metadata Sample</div>
+  <div id="videoArea">
+
+
+    <div id="video-container" data-shaka-player-cast-receiver-id="07AEE832">
+      <div id="metadata" class="metadata-hide"></div>
+      <video autoplay muted playsinline id="video" style="width: 100%; height: 100%"></video>
+    </div>
   </div>
 
-  <label>Your Manifest (paste and hit enter):</label>
-  <input id="manifestUrl" type="url" placeholder="place manifest URL here" size="80"
-    value="//aka.ms/LowLatencyDemo.m3u8" />
-</div>
-<p>
-</p>
-<div id="eventLog" class="eventLog">
-  waiting for timed metadata events...
+  <div id="console"></div>
+  <div id="manifest">
+    <label>Your Manifest (paste and hit enter):</label>
+    <input id="manifestUrl" type="url" placeholder="place manifest URL here" size="80"
+      value="//aka.ms/lowlatencydemo.m3u8" />
+  </div>
+
+
 </div>
