--- a/Player/examples/shaka/index.html
+++ b/Player/examples/shaka/index.html
@@ -3,7 +3,18 @@
 
 <div class="grid-container">
 
-  <div id="header">Azure Media Services LL-HLS with Timed Metadata Sample</div>
+  <div id="header">
+    <a href="https://github.com/Azure-Samples/media-services-v3-node-tutorials/tree/main/Player/examples/shaka">
+      <span class="microsoft"><svg aria-hidden="true" role="presentation" viewBox="0 0 26 25"
+          xmlns="http://www.w3.org/2000/svg">
+          <path d="M12.5708 0.981934H0.907471V12.3682H12.5708V0.981934Z" fill="#F25022"></path>
+          <path d="M25.4625 0.981934H13.7992V12.3682H25.4625V0.981934Z" fill="#7FBA00"></path>
+          <path d="M12.5708 13.5649H0.907471V24.9512H12.5708V13.5649Z" fill="#00A4EF"></path>
+          <path d="M25.4629 13.5649H13.7996V24.9512H25.4629V13.5649Z" fill="#FFB900"></path>
+        </svg></span>
+      <span class="title">Azure Media Services LL-HLS with Timed Metadata Sample</span>
+    </a>
+  </div>
   <div id="videoArea">
 
 
@@ -20,5 +31,7 @@
       value="//aka.ms/lowlatencydemo.m3u8" />
   </div>
 
-
+   <div id="footer">
+    <a href="http://media.azure">Azure Media Services</a> &copy; 2022 Microsoft Corporation.  
+   </div>
 </div>
