--- a/Player/examples/shaka/index.html
+++ b/Player/examples/shaka/index.html
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <div id="console"></div>
+  <div id="console">Waiting for timed metadata signals to arrive...</div>
   <div id="manifest">
     <label>Your Manifest (paste and hit enter):</label>
     <input id="manifestUrl" type="url" placeholder="place manifest URL here" size="80"
