--- a/Player/examples/shaka/index.html
+++ b/Player/examples/shaka/index.html
@@ -32,6 +32,6 @@
   </div>
 
   <div id="footer">
-  <a href="http://media.azure">Azure Media Services</a> &copy; 2022 Microsoft Corporation.  
+  <a href="http://media.azure">Azure Media Services</a>
   </div>
 </div>
