adding HLS.js demo application

--- a/Player/examples/shaka/index.html
+++ b/Player/examples/shaka/index.html
@@ -12,7 +12,7 @@
           <path d="M12.5708 13.5649H0.907471V24.9512H12.5708V13.5649Z" fill="#00A4EF"></path>
           <path d="M25.4629 13.5649H13.7996V24.9512H25.4629V13.5649Z" fill="#FFB900"></path>
         </svg></span>
-      <span class="title">Azure Media Services LL-HLS with Timed Metadata Sample</span>
+      <span class="title">Shaka Player LL-HLS with Timed Metadata Sample</span>
     </a>
   </div>
   <div id="videoArea">
