added fancy clocks

--- a/Player/examples/hls-js/index.html
+++ b/Player/examples/hls-js/index.html
@@ -23,6 +23,8 @@
       <video autoplay muted playsinline controls id="video" style="width: 100%; height: auto"></video>
     </div>
   </div>
+  <div id="clock">
+  </div>
 
   <div id="console">Waiting for timed metadata signals to arrive...</div>
   <div id="manifest">
